# compflow

./: .gitignore  API.postman_collection.json  Dockerfile  entrypoint.sh  pyproject.toml  readme.md
api/config/: asgi.py  settings.py  urls.py  wsgi.py
api/history/: models.py  permissions.py  serializers.py  urls.py  views.py
api/history/migrations/: 0001_initial.py  0002_initial.py  0003_alter_history_attended_in_period.py
api/post/: models.py  permissions.py  serializers.py  urls.py  views.py
api/post/migrations/: 0001_initial.py
api/schedule/: models.py  permissions.py  serializers.py  urls.py  views.py
api/schedule/migrations/: 0001_initial.py  0002_remove_schedule_subjects_schedule_subjects.py
api/subject/: models.py  permissions.py  serializers.py  urls.py  views.py
api/subject/migrations/: 0001_initial.py  0002_alter_subject_prerequisites.py
api/subject_directory/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/subject_directory/migrations/: 0001_initial.py  0002_alter_directoryfile_unique_together.py
api/user/: models.py  serializers.py  urls.py  validators.py  views.py
api/user/migrations/: 0001_initial.py  0002_user_entry_period.py  0003_alter_user_entry_period.py
